--- a/events.html
+++ b/events.html
@@ -27,6 +27,7 @@
                    
                 <h3>Current Group Art Shows</h3>
                 <ul>
+                    <li style="color:red">&#8226;  2016 Shows TBA</li>
                     <li><span>&#8226;  July 19th - August 2015</span> - Lake Worth Art League - 604 Lucerne Avenue, Lake Worth, FL</li>
                     <li><span>&#8226;  February 2015</span> - Lake Park Public Library, 529 Park Avenue, Lake Park, FL</li>
                     <li><span>&#8226;  January 31st, 2015</span> - Maltz Jupiter Theatre - Jupiter, FL</li>
@@ -38,16 +39,18 @@
                  Previously participated in group art shows at the following locations:
                     <br>
                     <ul>
-                    <li>Broward Art Guild</li>
-                    <li>Broward County Main Library </li>
-                    <li>Coral Springs Arts Festival</li>
-                    <li>Jonathan Dickinson State Park</li>
-                    <li>Lake Worth Art League</li>
-                    <li>Marina Grande Riviera Beach</li>
-                    <li>Parker Playhouse</li>
-                    <li>Rossetti Fine Art Gallery</li>
-                    <li>Roosevelt Island Fall for Arts Festival</li>
-                    <li>Sunrise Civic Center</li>
+                        <li>Maltz Jupiter Theatre</li>
+                        <li>Lake Park Public Library</li>
+                        <li>Broward Art Guild</li>
+                        <li>Broward County Main Library </li>
+                        <li>Coral Springs Arts Festival</li>
+                        <li>Jonathan Dickinson State Park</li>
+                        <li>Lake Worth Art League</li>
+                        <li>Marina Grande Riviera Beach</li>
+                        <li>Parker Playhouse</li>
+                        <li>Rossetti Fine Art Gallery</li>
+                        <li>Roosevelt Island Fall for Arts Festival</li>
+                        <li>Sunrise Civic Center</li>
                     </ul>
             </div>
 
