--- a/events.html
+++ b/events.html
@@ -27,13 +27,8 @@
                    
                 <h3>Current Group Art Shows</h3>
                 <ul>
-                    <li style="color:red">&#8226;  2016 Shows TBA</li>
-                    <li><span>&#8226;  July 19th - August 2015</span> - Lake Worth Art League - 604 Lucerne Avenue, Lake Worth, FL</li>
-                    <li><span>&#8226;  February 2015</span> - Lake Park Public Library, 529 Park Avenue, Lake Park, FL</li>
-                    <li><span>&#8226;  January 31st, 2015</span> - Maltz Jupiter Theatre - Jupiter, FL</li>
-                    <li> <img id="wizimage" src="img/events/maltz.png"></li>
-                    <br>
-                    <li><span>&#8226;  January - Mid-March 2015</span> - Lake Worth Art League - 604 Lucerne Avenue, Lake Worth, FL</li>             
+                    <li><span>&#8226;  January - March 2016</span> - Lake Worth Art League - 604 Lucerne Avenue, Lake Worth, FL</li>
+                    <li><span>&#8226;  February 2016</span> - Lake Park Public Library, 529 Park Avenue, Lake Park, FL</li>          
                 </ul>
             <div id="centered75line"></div>
                  Previously participated in group art shows at the following locations:
