styling and order on previous events:

--- a/events.html
+++ b/events.html
@@ -31,16 +31,16 @@
                     <li><span>&#8226;  February 2016</span> - Lake Park Public Library, 529 Park Avenue, Lake Park, FL</li>          
                 </ul>
             <div id="centered75line"></div>
-                 Previously participated in group art shows at the following locations:
+                 <h4>Previously participated in group art shows at the following locations:</h4>
                     <br>
                     <ul>
-                        <li>Maltz Jupiter Theatre</li>
-                        <li>Lake Park Public Library</li>
                         <li>Broward Art Guild</li>
                         <li>Broward County Main Library </li>
                         <li>Coral Springs Arts Festival</li>
                         <li>Jonathan Dickinson State Park</li>
+                        <li>Lake Park Public Library</li>
                         <li>Lake Worth Art League</li>
+                        <li>Maltz Jupiter Theatre</li>
                         <li>Marina Grande Riviera Beach</li>
                         <li>Parker Playhouse</li>
                         <li>Rossetti Fine Art Gallery</li>
