--- a/events.html
+++ b/events.html
@@ -24,11 +24,12 @@
             <br />
         </header>
             <div id="evwrapper">
-                   
+
                 <h3>Current Group Art Shows</h3>
                 <ul>
+                    <li><span>&#8226;  May 14, 2016</span> - Bear Lakes Country Club - 1901 Village Blvd., West Palm Beach, FL</li>
                     <li><span>&#8226;  January - March 2016</span> - Lake Worth Art League - 604 Lucerne Avenue, Lake Worth, FL</li>
-                    <li><span>&#8226;  February 2016</span> - Lake Park Public Library, 529 Park Avenue, Lake Park, FL</li>          
+                    <li><span>&#8226;  February 2016</span> - Lake Park Public Library, 529 Park Avenue, Lake Park, FL</li>
                 </ul>
             <div id="centered75line"></div>
                  <h4>Previously participated in group art shows at the following locations:</h4>
