--- a/events.html
+++ b/events.html
@@ -27,13 +27,14 @@
                    
                 <h3>Current Group Art Shows</h3>
                 <ul>
-                    <li><span>&#8226;  January - March 2016</span> - Lake Worth Art League - 604 Lucerne Avenue, Lake Worth, FL</li>
-                    <li><span>&#8226;  February 2016</span> - Lake Park Public Library, 529 Park Avenue, Lake Park, FL</li>          
+                    <li><span>&#8226;  January 3 - February 4, 2017</span> - Art on Park Gallery - 800 Park Avenue, Lake Park, FL</li>
+                    <li><img id="wizimage" src="img/events/1460.jpg"></li>
                 </ul>
             <div id="centered75line"></div>
                  <h4>Previously participated in group art shows at the following locations:</h4>
                     <br>
                     <ul>
+                        <li>Bear Lakes Country Club</li>
                         <li>Broward Art Guild</li>
                         <li>Broward County Main Library </li>
                         <li>Coral Springs Arts Festival</li>
@@ -50,7 +51,7 @@
             </div>
 
         <footer>
-            <p>&copy; 2015 <a href=mailto:him@owenso.com>Owens O'Brien.</a></p>
+            <p>&copy; 2017 <a href=mailto:him@owenso.com>Owens O'Brien.</a></p>
         </footer>
     </div>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
