--- a/events.html
+++ b/events.html
@@ -27,13 +27,14 @@
 
                 <h3>Current Group Art Shows</h3>
                 <ul>
-                    <li><span>&#8226;  January 3 - February 4, 2017</span> - Art on Park Gallery - 800 Park Avenue, Lake Park, FL</li>
-                    <li><img id="wizimage" src="img/events/1460.jpg"></li>
+                    <li><span>&#8226;  February 20 - March 24, 2017</span> - Art on Park Gallery - 800 Park Avenue, Lake Park, FL</li>
+                    <li><img id="wizimage" src="img/events/SCAPES 2017 Poster WEB.jpg"></li>
                 </ul>
             <div id="centered75line"></div>
                  <h4>Previously participated in group art shows at the following locations:</h4>
                     <br>
                     <ul>
+                        <li>Art on Park Gallery</li>
                         <li>Bear Lakes Country Club</li>
                         <li>Broward Art Guild</li>
                         <li>Broward County Main Library </li>
