--- a/events.html
+++ b/events.html
@@ -27,8 +27,9 @@
 
                 <h3>Current Group Art Shows</h3>
                 <ul>
-                    <li><span>&#8226;  February 20 - March 24, 2017</span> - Art on Park Gallery - 800 Park Avenue, Lake Park, FL</li>
-                    <li><img id="wizimage" src="img/events/SCAPES 2017 Poster WEB.jpg"></li>
+                    <li><span>&#8226;  Now thru April</span> - The Gallery at Center for Creative Education - 425 24th St, West Palm Beach, FL 33407 </li>
+                    <!--<li><span>&#8226;  February 20 - March 24, 2017</span> - Art on Park Gallery - 800 Park Avenue, Lake Park, FL</li>
+                    <li><img id="wizimage" src="img/events/SCAPES 2017 Poster WEB.jpg"></li>-->
                 </ul>
             <div id="centered75line"></div>
                  <h4>Previously participated in group art shows at the following locations:</h4>
